test/spec_vectors/simd_i8x16_arith2/fail/module_10.wat
(module (func (result v128) (i8x16.max_u (i32.const 0) (f32.const 0.0))))